# weekend.software

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.home-merge/: .gitignore  .mcp.json  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  weekend.config.json  weekend.config.json.bak-local-portless-20260304-160907  weekend.config.json.bak-portless-migration-20260304-160037
docs/: platform-review.md  portless-migration-plan.md  rust-shell-surfaces.html  rust-shell-surfaces.md
scripts/: clean-rust.mjs  copy-portless-runtime.sh  copy-sidecar.sh  design-index.ts  run-node-tests.mjs  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: weekend-browser-mcp-aarch64-apple-darwin  weekend-mcp-aarch64-apple-darwin
src-tauri/capabilities/: browser-remote-eval-callback.json  default.json  shared-drop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml  browser-eval-result.toml
src-tauri/src/: app.rs  bridge_inject.js  bridge_server.rs  bridge_types.rs  event_buffer.rs  logging.rs  main.rs  webview_ops.rs
src-tauri/src/app/: agent_runtime.rs  browser.rs  log_commands.rs  project_files.rs  project_tree.rs  projects.rs  runtime_probe.rs  shared_assets.rs  shared_drop.rs  terminal.rs  theme.rs
src-tauri/src/js/: bridge_configure.js  browser_bridge.js  element_grab_configure.js  eval_with_result.js  history_back.js  mod.rs  navigate_webview.js  reload_shortcut.js  shared_drop_init.js  theme_bridge.js  theme_bridge_apply.js
(+314 files in other folders)
